tests/invalid/inst_list_dup.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%

:- module inst_list_dup.
:- interface.

:- inst inst1 == bound(ground-unique ; ground-ground).
